--- a/src/content/en/site-kit/_project.yaml
+++ b/src/content/en/site-kit/_project.yaml
@@ -31,4 +31,4 @@ announcement:
       .goog-font {
         font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
       }
-    </style> Join us for <b class="goog-font">web.dev LIVE</b>, a digital event from June 30th to July 2nd to learn modern web techniques. More at <a href="https://web.dev/live/" target="_blank" rel="nofollow">web.dev/live</a>
+    </style> <b class="goog-font">web.dev LIVE</b> <b>has kicked off!</b> Join us now for our digital event from June 30th to July 2nd at <a href="https://web.dev/live/" target="_blank" rel="nofollow">web.dev/live</a>
