--- a/src/content/en/fundamentals/performance/_toc.yaml
+++ b/src/content/en/fundamentals/performance/_toc.yaml
@@ -50,7 +50,8 @@ toc:
           path: /web/fundamentals/performance/optimizing-content-efficiency/optimize-encoding-and-transfer
           step_group: perf-oce
         - title: Image Optimization
-          path: /web/fundamentals/performance/optimizing-content-efficiency/image-optimization
+          path: https://web.dev/fast/#optimize-your-images
+          status: external
           step_group: perf-oce
         - title: Automating Image Optimization
           path: https://web.dev/fast/#optimize-your-images
