redirect Image Optimization (#8845)
Co-authored-by: Pete LePage <pete.lepage@pobox.com>

--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -76,6 +76,9 @@ redirects:
 - from: /web/fundamentals/performance/optimizing-content-efficiency/http-caching
   to: https://web.dev/http-cache/
 
+- from: /web/fundamentals/performance/optimizing-content-efficiency/image-optimization
+  to: https://web.dev/fast/#optimize-your-images
+
 - from: /web/fundamentals/performance/prpl-pattern
   to: https://web.dev/apply-instant-loading-with-prpl/
 
