--- a/src/content/en/_project.yaml
+++ b/src/content/en/_project.yaml
@@ -36,3 +36,6 @@ announcement:
         font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
       }
     </style> <b class="goog-font">web.dev LIVE</b> is now over! Head to <a href="https://web.dev/live/" target="_blank" rel="nofollow">web.dev/live</a> to watch all the sessions, see top Q&amp;A, and more.
+
+# Racial Equity Banner
+include: /_shared/announcements/racialequity.yaml
