--- a/src/content/en/fundamentals/performance/_toc.yaml
+++ b/src/content/en/fundamentals/performance/_toc.yaml
@@ -66,7 +66,8 @@ toc:
           path: /web/fundamentals/performance/optimizing-content-efficiency/loading-third-party-javascript/
           step_group: perf-oce
         - title: Web Font Optimization
-          path: /web/fundamentals/performance/optimizing-content-efficiency/webfont-optimization
+          path: https://web.dev/fast/#optimize-web-fonts
+          status: external
           step_group: perf-oce
         - title: HTTP Caching
           path: https://web.dev/http-cache/
