--- a/src/content/en/tools/workbox/guides/_toc.yaml
+++ b/src/content/en/tools/workbox/guides/_toc.yaml
@@ -1,6 +1,8 @@
 toc:
 - title: "Get Started"
   path: /web/tools/workbox/guides/get-started
+- title: "Using bundlers with Workbox"
+  path: /web/tools/workbox/guides/using-bundlers
 - title: "Precache Files"
   path: /web/tools/workbox/guides/precache-files
   style: accordion
@@ -21,8 +23,6 @@ toc:
   path: /web/tools/workbox/guides/using-plugins
 - title: "Enable Offline Google Analytics"
   path: /web/tools/workbox/guides/enable-offline-analytics
-- title: "Using Bundlers (webpack/Rollup) with Workbox"
-  path: /web/tools/workbox/guides/using-bundlers
 - title: "Troubleshoot and Debug"
   path: /web/tools/workbox/guides/troubleshoot-and-debug
 - title: "Understanding Storage Quota"
