--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1444,6 +1444,22 @@ kuu:
   description:
     en: "Kuu is interested in media technology on the Web"
 
+maudnalpas:
+  name:
+    given: Maud
+    family: Nalpas
+  org:
+    name: Google
+    unit: Developer Relations
+  country: Germany
+  role:
+    - author
+  twitter: maudnals
+  github: maudnals
+  email: maudn@google.com
+  description:
+    en: Developer advocate at Google, working on Chrome privacy and security
+
 jacquerie:
   name:
     given: Jacopo
