--- a/src/content/en/tools/workbox/guides/_toc.yaml
+++ b/src/content/en/tools/workbox/guides/_toc.yaml
@@ -21,8 +21,8 @@ toc:
   path: /web/tools/workbox/guides/handle-third-party-requests
 - title: "Using Plugins"
   path: /web/tools/workbox/guides/using-plugins
-- title: "Enable Offline Google Analytics"
-  path: /web/tools/workbox/guides/enable-offline-analytics
+- title: "Using Bundlers (webpack/Rollup) with Workbox"
+  path: /web/tools/workbox/guides/using-bundlers
 - title: "Troubleshoot and Debug"
   path: /web/tools/workbox/guides/troubleshoot-and-debug
 - title: "Understanding Storage Quota"
