add survey banner

--- a/src/data/announcement.yaml
+++ b/src/data/announcement.yaml
@@ -18,6 +18,5 @@ description: >
         font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
       }
     </style>
-    <b class="goog-font">web.dev LIVE</b> is now over! Head to
-    <a href="https://web.dev/live/" target="_blank" rel="nofollow">web.dev/live</a>
-    to watch all the sessions, see top Q&amp;A, and more.
+    Have a voice in guiding the future of Google's developer brands.
+    <a href="https://google.qualtrics.com/jfe/form/SV_2oE4GCkTH5QVVNr?PT=3" target="_blank" rel="nofollow">Share your thoughts in our survey.</a>
