--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1443,6 +1443,21 @@ kuu:
   email: miyazaqui@gmail.com
   description:
     en: "Kuu is interested in media technology on the Web"
+    
+fawazm:
+  name:
+    given: Fawaz
+    family: Mohammad
+  org:
+    name: Google
+    unit: Web Identity
+  country: Canada
+  role:
+    - author
+  github: fawazmohamamd
+  email: fmohammad.hba2021@ivey.ca
+  description:
+    en: Software Development Intern, working on Chrome Web Identity and DevTools
 
 maudnalpas:
   name:
