fixes close #8956 for hyperlink correction which was going to 404 page.

--- a/src/content/en/fundamentals/_index.yaml
+++ b/src/content/en/fundamentals/_index.yaml
@@ -105,7 +105,7 @@ landing_page:
       description: >
         Web Components are a new set of standards which let you create your own HTML elements.
         You can use them to build anything, from simple UI elements, to entire applications.
-      path: web-components/
+      path: web/fundamentals/web-components/
       buttons:
       - label: Learn more
         path: /web/fundamentals/web-components/
