--- a/src/content/en/tools/chrome-devtools/_toc.yaml
+++ b/src/content/en/tools/chrome-devtools/_toc.yaml
@@ -207,6 +207,8 @@ toc:
     path: /web/tools/chrome-devtools/memory-problems/heap-snapshots
   - title: Use the Allocation Profiler
     path: /web/tools/chrome-devtools/memory-problems/allocation-profiler
+- title: Media
+  path: /web/tools/chrome-devtools/media/
 - title: Workspaces
   path: /web/tools/chrome-devtools/workspaces/
 - title: Progressive Web Apps
