--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2208,6 +2208,22 @@ jecelynyeen:
   description:
     en: Developer advocate working on Chrome DevTools at Google
 
+tvanderlippe:
+  name:
+    given: Tim
+    family: van der Lippe
+  org:
+    name: Google
+    unit: Chrome
+  country: United Kingdom
+  role:
+    - author
+  twitter: timvdlippe
+  github: timvdlippe
+  email: tvanderlippe@google.com
+  description:
+    en: Software Engineer working on Chrome DevTools at Google
+
 maciejzasada:
   name:
     given: Maciej
