--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2053,6 +2053,22 @@ johyphenel:
   twitter: johyphenel
   email: jo-el@google.com
 
+tvanderlippe:
+  name:
+    given: Tim
+    family: van der Lippe
+  org:
+    name: Google
+    unit: Chrome
+  country: United Kingdom
+  role:
+    - author
+  twitter: timvdlippe
+  github: timvdlippe
+  email: tvanderlippe@google.com
+  description:
+    en: Software Engineer working on Chrome DevTools at Google
+
 rviscomi:
   name:
     given: Rick
