--- a/src/content/en/_redirects.yaml
+++ b/src/content/en/_redirects.yaml
@@ -115,6 +115,9 @@ redirects:
 - from: /web/fundamentals/performance/optimizing-javascript/code-splitting
   to: https://web.dev/reduce-javascript-payloads-with-code-splitting
 
+- from: /web/fundamentals/instant-and-offline/offline-ux
+  to: https://web.dev/offline-ux-considerations/
+
 ## Redirects for Updates content migrated to web.dev
 
 - from: /web/updates/2011/11/Quota-Management-API-Fast-Facts
