--- a/src/content/en/fundamentals/instant-and-offline/_redirects.yaml
+++ b/src/content/en/fundamentals/instant-and-offline/_redirects.yaml
@@ -6,3 +6,6 @@ redirects:
 
 - from: /web/fundamentals/instant-and-offline/
   to: /web/fundamentals/
+- from: /web/fundamentals/instant-and-offline/offline-cookbook
+  to: https://web.dev/offline-cookbook/
+  
