--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -2,7 +2,7 @@
 
 ##
 ## Please add new contributors in alphabetical order by family name.
-##
+## Write new contributor name alphabetically.
 
 # EXAMPLE
 # givenfamily:  # REQUIRED - place a 512x512 px JPG image file with same name in /images/contributors
