--- a/src/content/en/tools/workbox/_project.yaml
+++ b/src/content/en/tools/workbox/_project.yaml
@@ -34,4 +34,4 @@ announcement:
       .goog-font {
         font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
       }
-    </style> Have a voice in guiding the future of Google's developer brands. <a href="https://google.qualtrics.com/jfe/form/SV_2oE4GCkTH5QVVNr?PT=3" target="_blank" rel="nofollow">Share your thoughts in our survey.</a>
+    </style> Join us live on October 16-18th for our virtual DevFest. <a href="https://goo.gle/devfest">Register now</a>.
