--- a/src/content/en/android/_project.yaml
+++ b/src/content/en/android/_project.yaml
@@ -35,4 +35,4 @@ announcement:
       .goog-font {
         font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
       }
-    </style> Join us live on October 16-18th for our virtual DevFest. <a href="https://goo.gle/devfest">Register now</a>.
+    </style> <b>Chrome Dev Summit 2020</b> is back & going virtual on on December 9-10. <a href="http://developer.chrome.com/devsummit/?utm_source=webfuhp&utm_medium=website">Learn more</a>
