change role to author

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -1614,7 +1614,7 @@ nsatragno:
     unit: Chrome
   country: CA
   role:
-    - software engineer
+    - author
   twitter: nsatragno
   email: nsatragno@google.com
   description:
