Add jobay github

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -185,6 +185,7 @@ jobay:
   country: DK
   role:
     - author
+  github: johanbay
   description:
     en: Software Development Intern working on Puppeteer
 
