Add jobay as contributor (#9102)
* Add jobay as contributor

* add jobay image

* Add jobay github

--- a/src/data/_contributors.yaml
+++ b/src/data/_contributors.yaml
@@ -175,6 +175,20 @@ kaycebasques:
   description:
     en: Technical Writer, Chrome DevTools & Lighthouse
 
+jobay:
+  name:
+    given: Johan
+    family: Bay
+  org:
+    name: Google
+    unit: Chrome DevTools
+  country: DK
+  role:
+    - author
+  github: johanbay
+  description:
+    en: Software Development Intern working on Puppeteer
+
 beaufortfrancois:
   name:
     given: François
