Adds article on TWA + Web Share Target
- Adds the article
- Updates android-browser-helper reference on integration guide
  to 2.0.1

--- a/src/content/en/android/trusted-web-activity/_toc.yaml
+++ b/src/content/en/android/trusted-web-activity/_toc.yaml
@@ -13,5 +13,7 @@ toc:
     path: /web/android/trusted-web-activity/query-parameters/
   - title: Migrating from custom-tabs-client to android-browser-helper
     path: /web/android/trusted-web-activity/android-browser-helper-migration/
+  - title: Enable Web Share Target
+    path: /web/android/trusted-web-activity/web-share-target/
 - title: Map of Trusted Web Activity libraries and tools
   path: /web/android/trusted-web-activity/lay-of-the-land/
