--- a/src/content/en/tools/workbox/modules/_index.yaml
+++ b/src/content/en/tools/workbox/modules/_index.yaml
@@ -119,6 +119,15 @@ landing_page:
           path: /web/tools/workbox/reference-docs/latest/module-workbox-range-requests
         - label: Demo
           path: https://glitch.com/edit/#!/workbox-range-requests
+      
+      - heading: workbox-recipes
+          description: >
+            Easily use common workbox patterns without needing to set them up yourself from individual packages.
+          buttons:
+            - label: Learn more
+              path: /web/tools/workbox/modules/workbox-recipes
+            - label: Reference
+              path: /web/tools/workbox/reference-docs/latest/module-workbox-recipes.Router
 
       - heading: workbox-routing
         description: >
@@ -143,7 +152,8 @@ landing_page:
           path: /web/tools/workbox/reference-docs/latest/module-workbox-strategies
         - label: Demo
           path: https://glitch.com/edit/#!/workbox-strategies
-
+    
+    - items:
       - heading: workbox-streams
         description: >
           This modules provides support for composing a response from a series
