Adds "What's new for Web in Play" article

--- a/src/content/en/android/trusted-web-activity/_toc.yaml
+++ b/src/content/en/android/trusted-web-activity/_toc.yaml
@@ -17,3 +17,5 @@ toc:
     path: /web/android/trusted-web-activity/web-share-target/
 - title: Map of Trusted Web Activity libraries and tools
   path: /web/android/trusted-web-activity/lay-of-the-land/
+- title: What's new for Web in Play
+  path: /web/android/trusted-web-activity/whats-new/
