Adds the Using Play Billing with TWA documentation

--- a/src/content/en/android/trusted-web-activity/_toc.yaml
+++ b/src/content/en/android/trusted-web-activity/_toc.yaml
@@ -15,5 +15,7 @@ toc:
     path: /web/android/trusted-web-activity/android-browser-helper-migration/
   - title: Enable Web Share Target
     path: /web/android/trusted-web-activity/web-share-target/
+  - title: Use Play Billing in your Trusted Web Activity
+    path: /web/android/trusted-web-activity/play-billing/
 - title: Map of Trusted Web Activity libraries and tools
   path: /web/android/trusted-web-activity/lay-of-the-land/
