--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "globule": "^1.0.0",
     "googleapis": "^31.0.2",
     "gulp": "^3.9.1",
+    "gulp-cli": "^2.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.7",
     "handlebars": "^4.0.5",
