CDS Over Banner

--- a/src/content/en/_index.yaml
+++ b/src/content/en/_index.yaml
@@ -56,19 +56,18 @@ landing_page:
     - image_path: /web/images/cds20-art.png
       heading: "Chrome Dev Summit 2020"
       description: >
-        Chrome Dev Summit is <b>here</b>! We've got all the latest updates
-        coming to the web and a whole new way to experience the summit with
-        CDS Adventure!.
+        Chrome Dev Summit is over, and we had  fun hosting all of you at
+        the Chrome Dev Summit, and in CDS Adventure.
       list:
       - heading: December 9-10
         description: Sessions, Live Q&A, Workshops, Office Hours & More!
         icon:
           icon_name: event
       buttons:
-      - label: Join now
-        path: http://developer.chrome.com/devsummit/?utm_source=webfuhp&utm_medium=website
-        classname: button button-primary cds20-now
-      path: http://developer.chrome.com/devsummit/?utm_source=webfuhp&utm_medium=website
+      - label: Watch sessions
+        path: https://goo.gle/cds20-sessions
+        classname: button button-primary
+      path: http://goo.gle/cds20-sessions
 
 
   - classname: wf-landing-row
