--- a/src/content/en/tools/_project.yaml
+++ b/src/content/en/tools/_project.yaml
@@ -20,17 +20,13 @@ announcement:
   description: |
     <style>
       .devsite-banner-announcement {
-        /*background-color: #e8f0fe;*/
-        background-color: #F6AEA9;
-        /*color: #424242;*/
-        color: #000000;
+        background-color: #e8f0fe;
+        color: #424242;
       }
       .devsite-banner-announcement :link,
       .devsite-banner-announcement :visited {
-        /*background: #e8f0fe;*/
-        background-color: #F6AEA9;
-        /*color: #039BE5;*/
-        color: #ffffff;
+        background: #e8f0fe;
+        color: #039BE5;
       }
       .devsite-banner-announcement span.material-icons {
         vertical-align: middle;
@@ -39,4 +35,4 @@ announcement:
       .goog-font {
         font-family: Google Sans,Noto Sans,Noto Sans JP,Noto Sans KR,Noto Naskh Arabic,Noto Sans Thai,Noto Sans Hebrew,Noto Sans Bengali,sans-serif;
       }
-    </style> <b class="goog-font">Chrome Dev Summit 2020</b> is <b>LIVE</b>! Join the livestream <a href="https://goo.gle/cds2020">goo.gle/cds2020</a> now!
+    </style> It's a wrap for <b class="goog-font">Chrome Dev Summit 2020</b>! Watch all the sessions at <a href="https://goo.gle/cds20-sessions">goo.gle/cds20-sessions</a> now!
